<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="permission_options">Permissions</string>
    <string name="permission_notifications">Notifications</string>
    <string name="details_notifications">View &amp; interact with notifications</string>
    <string name="permission_voice">Voice Launch</string>
    <string name="details_voice">Allow voice activated app launch</string>
    <string name="permission_usage">Usage Access</string>
    <string name="details_usage">Sort app drawer by recently used</string>
    <string name="permission_optimization">Ignore Battery</string>
    <string name="details_optimization">Prevent early service termination</string>
    <string name="permission_accessibility">Accessibility</string>
    <string name="details_accessibility">Enable back button in navigation</string>

    <string name="config_options">Compatibility</string>
    <string name="options_keyboard">Keyboard / IME</string>
    <string name="details_keyboard">$1.99 can keep development active</string>

    <string name="general_options">Cover Settings</string>
    <string name="options_placement">Icon Alignment</string>
    <string name="options_theme">Theme Selection</string>
    <string-array name="theme_options">
        <item>Auto</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="toggle_options">Toggles</string>

    <string name="drawer_options">Drawer Options</string>
    <string name="options_vibration">Button Feedback</string>
    <string name="options_gestures">Drawer Gesture</string>
    <string name="options_minimize">Close on Minimize</string>
    <string name="options_animate">Page Animation</string>
    <string name="options_length">Apps Per Row &#160;%1$s</string>
    <string name="options_search">App Search Bar</string>
    <string name="options_wallpaper">Set Wallpaper</string>
    <string name="options_radius">Wallpaper Blur</string>
    <string name="options_timeout">Screen Timeout &#160;%1$s</string>

    <string name="swap_viewgrid">Switch GridView to ListView Style</string>
    <string name="swap_viewlist">Switch ListView to GridView Style</string>

    <string name="notice_options">Notifications</string>
    <string name="options_dismiss">Snooze Length (%1$sᵐ)</string>

    <string name="visibility_options">Hide / Show Apps</string>

    <string name="donate_link">Donate</string>
    <string name="google_link">Donate with Google Play</string>
    <string name="sponsor_link">Sponsor on GitHub</string>
    <string name="paypal_link">Donate with PayPal</string>
    <string name="cancel_link">Cancel Subscription</string>
    <string name="logcat_link">Problem?</string>
    <string name="logcat_crash">ERROR! Submit a log?</string>

    <string name="keyboard_missing">Keyboard required!</string>
    <string name="wallpaper_cleared">Wallpaper reset!</string>

    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_wiki">Visit Wiki</string>
    <string name="button_uninstall">Uninstall</string>
    <string name="button_disable">Disable</string>

    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_alpha">Cover Bar Opacity</string>

    <string name="overlay_service">%1$s Overlay Service</string>
    <string name="display_service">%1$s Display Service</string>
    <string name="update_service">%1$s Update Available</string>

    <string name="loading_text">Loading&#8230;</string>

    <string name="sub_button">%1$s Monthly Donation</string>
    <string name="iap_button">%1$s One-Time Donation</string>
    <string name="donation_thanks">Thanks for supporting TooUI!</string>

    <string name="menu_recent">Recent</string>
    <string name="menu_home">Home</string>
    <string name="menu_back">Back</string>

    <string name="toggle_wifi">Toggle Wifi</string>
    <string name="toggle_bluetooth">Toggle Bluetooth</string>
    <string name="toggle_nfc">Toggle NFC</string>
    <string name="toggle_sound">Toggle Sound</string>
    <string name="toggle_dnd">Toggle DnD</string>
    <string name="toggle_torch">Toggle Torch</string>
    <string name="toggle_widgets">Toggle Widgets</string>
    <string name="color_theme">Menu Accent Color</string>

    <string name="tiramisu_bluetooth">Bluetooth restricted (Android 13)</string>

    <string name="incompatibility_warning">SamSprung is not compatible with apps that block the entire screen.\nPlease remove or disable this app to continue.</string>
    <string name="cover_widget_warning">Important: THIS IS NOT A COVER SCREEN WIDGET</string>
    <string name="cover_switch_warning">\nMain switch must be enabled to appear on cover.</string>
    <string name="cover_finish_warning">\nPress back button again to exit SamSprung TooUI.</string>

    <string name="display_unavailable">Requires more than one display!</string>

    <string name="main_screen_required">Open device to continue</string>
    <string name="incompatible_fragment">Panel cannot be deleted</string>

    <string name="accessibility_disclaimer">Accessibility allows SamSprung to simulate the hardware back button.\n\nClick confirm to open Accessibility\n\nInstalled apps -> SamSprung Navigation\n&#160;&#160;&#160;&#160;-> Toggle switch on -> Allow to enable.</string>
    <string name="accessibility_service">SamSprung Navigation</string>
    <string name="accessibility_details">Enable virtual navigation action and hardware support.</string>

    <string name="btn_close_tip">Close Launcher</string>

    <string name="rotation_lock">Lock apps to portrait?</string>
    <string name="rotation_lock_action">Lock</string>
    <string name="btn_rotation_tip">Rotation Lock</string>

    <string name="lock_enabled">Device is locked!</string>
    <string name="fingerprint_required">Please unlock the device\nwith your fingerprint</string>
    <string name="auth_unavailable">Bixby unlock required to continue!</string>
    <string name="auth_required">Fingerprint required!</string>
    <string name="auth_required_action">Scan</string>
    <string name="btn_auth_tip">Auth Status</string>

    <string name="widget_cancel">Cancel Widget Selection</string>
    <!-- Error message when user has filled a panel or cancelled configuration -->
    <string name="out_of_space">Cancelled adding widget</string>
    <!-- Text to show user in place of a widget when we can't display it properly -->
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="widget_error">Widget unavailable!</string>
</resources>