<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toggle_wifi"
        android:title="@string/toggle_wifi"
        android:icon="@drawable/ic_wifi_on_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/toggle_bluetooth"
        android:title="@string/toggle_bluetooth"
        android:icon="@drawable/ic_bluetooth_on_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/toggle_nfc"
        android:title="@string/toggle_nfc"
        android:icon="@drawable/ic_nfc_on_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/toggle_sound"
        android:title="@string/toggle_sound"
        android:icon="@drawable/ic_sound_on_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/toggle_dnd"
        android:title="@string/toggle_dnd"
        android:icon="@drawable/ic_do_not_disturb_off_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/toggle_torch"
        android:title="@string/toggle_torch"
        android:icon="@drawable/ic_flashlight_off_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/toggle_widgets"
        android:title="@string/toggle_widgets"
        android:icon="@drawable/ic_widgets_24dp"
        app:showAsAction="always" />
</menu>