<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">
<com.eightbit.view.AnimatedLinearLayout
    android:id="@+id/color_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/color_red_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:textColor="?android:textColorPrimary"
        android:gravity="center_vertical"
        android:text="@string/color_red" />

    <SeekBar
        android:id="@+id/color_red_bar"
        android:max="255"
        android:progress="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/color_green_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:textColor="?android:textColorPrimary"
        android:gravity="center_vertical"
        android:text="@string/color_green" />

    <SeekBar
        android:id="@+id/color_green_bar"
        android:max="255"
        android:progress="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/color_blue_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:textColor="?android:textColorPrimary"
        android:gravity="center_vertical"
        android:text="@string/color_blue" />

    <SeekBar
        android:id="@+id/color_blue_bar"
        android:max="255"
        android:progress="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/color_alpha_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?android:textColorPrimary"
            android:gravity="center_vertical"
            android:text="@string/color_alpha" />

        <View
            android:id="@+id/alpha_preview"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="40dp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/color_alpha_bar"
        android:max="100"
        android:progress="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"/>

</com.eightbit.view.AnimatedLinearLayout>
</merge>