<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:id="@+id/general"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="?android:textColorPrimary"
        android:gravity="center"
        android:text="@string/color_theme" />

    <View
        android:id="@+id/color_composite"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp" />

    <include
        layout="@layout/color_panel"
        android:id="@+id/color_panel" />

    <LinearLayout
        android:id="@+id/placement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="26sp"
            android:textColor="?android:textColorPrimary"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/options_placement" />

        <SeekBar
            android:id="@+id/placement_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:max="2"
            android:thumb="@drawable/ic_baseline_samsprung_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="26sp"
            android:textColor="?android:textColorPrimary"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/options_theme" />

        <Spinner
            android:id="@+id/theme_spinner"
            style="?android:attr/dropDownSpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <include
        layout="@layout/toolbar_options"
        android:id="@+id/toolbar_options" />
</LinearLayout>
</merge>